test/error/invalid_character.true
File 0, line 1, col 11:
unknown character '$'

File 0, line 1, col 16:
unknown character '''

